<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Notes App</string>
    <string name="add_note">Add Note</string>
    <string name="add_checklist">Add Checklist</string>
    <string name="no_notes_yet">No notes yet. Tap + to create one.</string>
    <string name="no_checklists_yet">No checklists yet. Tap + to create one.</string>
    <string name="title">Title</string>
    <string name="content">Content</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="add_item">Add item</string>
    <string name="add">Add</string>
</resources>
